--- a/_sass/main/components/_page_stack.scss
+++ b/_sass/main/components/_page_stack.scss
@@ -31,5 +31,26 @@
     &:after {
       @include transform(rotate(-1deg));
     }
+
+    hr {
+      margin: 2rem 0;
+      border: none;
+
+      &:before {
+        content: '';
+        display: block;
+        height: 1px;
+        background: #e6e6e6;
+        @include background(linear-gradient(left, rgba(#e6e6e6, 0), #e6e6e6 10%, #e6e6e6 90%, rgba(#e6e6e6, 0)));
+      }
+
+      &:after {
+        content: '';
+        display: block;
+        height: 1px;
+        background: #fcfcfc;
+        @include background(linear-gradient(left, rgba(#fcfcfc, 0), #fcfcfc 10%, #fcfcfc 90%, rgba(#fcfcfc, 0)));
+      }
+    }
   }
 }
