--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -11,7 +11,9 @@
 
 // Components
 @import "main/components/boa_constrictor";
+@import "main/components/calendar_date";
 @import "main/components/footer";
 @import "main/components/nav";
 @import "main/components/page_stack";
+@import "main/components/post_list";
 @import "main/components/syntax_highlight";
