--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,11 @@
 layout: page_stack
 ---
 <header>
+  <div class="calendar-date" title="{{ page.date | date_to_string }}">
+    <div class="calendar-date_month">{{ page.date | date: "%b" }}</div>
+    <div class="calendar-date_day">{{ page.date | date: "%d" }}</div>
+  </div>
   <h2>{{ page.title }}</h2>
-  <p class="meta">{{ page.date | date_to_string }}</p>
 </header>
 <hr>
 
