--- a/_sass/card_experiments.scss
+++ b/_sass/card_experiments.scss
@@ -10,12 +10,59 @@ html, body {
   padding: 0;
 }
 
-#card-game {
+#card-experiments {
   position: relative;
-  margin: 0 auto;
-  width: 100%;
-  height: 100%;
-  min-height: 600px;
+
+  &:-webkit-full-screen {
+    width: 100%;
+    height: 100%;
+  }
+
+  &:before {
+    content: '';
+    display: block;
+    padding-top: 95%;
+  }
+
+  .options {
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    height: 40px;
+    line-height: 40px;
+
+    form {
+      display: inline-block;
+    }
+  }
+}
+
+// .card-game-container {
+//   position: relative;
+
+//   .card-game {
+//     position: absolute;
+//     top: 0;
+//     right: 0;
+//     bottom: 80px;
+//     left: 0;
+//   }
+
+//   &:before {
+//     content: '';
+//     display: block;
+//     padding-top: 75%;
+//   }
+// }
+
+.card-game {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 80px;
+  left: 0;
+
   @include user-select(none);
   font-size: 16px;
 }
