--- a/_sass/card_experiments.scss
+++ b/_sass/card_experiments.scss
@@ -10,27 +10,34 @@ html, body {
   padding: 0;
 }
 
-#card-experiments {
+.aspect-ratio {
   position: relative;
+
+  > canvas {
+    display: block;
+    width: 100%;
+    visibility: hidden;
+  }
+}
+
+#card-experiments {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  flex-flow: column nowrap;
 
   &:-webkit-full-screen {
     width: 100%;
     height: 100%;
   }
 
-  &:before {
-    content: '';
-    display: block;
-    padding-top: 95%;
-  }
-
   .options {
-    position: absolute;
-    left: 20px;
-    right: 20px;
-    bottom: 20px;
-    height: 40px;
-    line-height: 40px;
+    flex: 0 1 auto;
+    align-self: center;
 
     form {
       display: inline-block;
@@ -57,11 +64,9 @@ html, body {
 // }
 
 .card-game {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 80px;
-  left: 0;
+  position: relative;
+
+  flex: 1 1 auto;
 
   @include user-select(none);
   font-size: 16px;
