--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: page_stack
+layout: default
 ---
 <header>
   <div class="calendar-date" title="{{ page.date | date_to_string }}">
@@ -8,6 +8,5 @@ layout: page_stack
   </div>
   <h2>{{ page.title }}</h2>
 </header>
-<hr>
 
 {{ content }}
