--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
+    <title>{% if page.title %}{{page.title}} | {% endif %}Eric Freese</title>
     <meta name="viewport" content="width=device-width">
 
     <link rel="stylesheet" href="/css/main.css">
@@ -19,20 +19,16 @@
   <body>
     <nav>
       <div class="boa-constrictor">
+        <h1><a href="/">Eric Freese</a></h1>
         <ul class="navigation">
           <li><a href="/">Home</a></li>
+          <li><a href="/work.html">Work</a></li>
           <li><a href="/resume.html">Resume</a></li>
         </ul>
-        <h1><a href="/">Eric Freese</a></h1>
       </div>
     </nav>
-
-    {{ content }}
-
-    <footer>
-      <div class="boa-constrictor">
-        Site created by Eric Freese with the help of <a href="http://jekyllrb.com/" target="_blank">Jekyll</a>, <a href="http://sass-lang.com/" target="_blank">Sass</a>, <a href="http://compass-style.org/" target="_blank">Compass</a>, and <a href="http://www.google.com/fonts" target="_blank">Google Fonts</a>.
-      </div>
-    </footer>
+    <div class="boa-constrictor">
+      {{ content }}
+    </div>
   </body>
 </html>
