--- a/_sass/main/components/_boa_constrictor.scss
+++ b/_sass/main/components/_boa_constrictor.scss
@@ -1,7 +1,5 @@
 .boa-constrictor {
   margin: 0 auto;
-  width: 940px;
-
-  min-width: 750px;
-  max-width: 100%;
+  max-width: 32em;
+  padding: 0 1em;
 }
