--- a/_sass/main/components/_calendar_date.scss
+++ b/_sass/main/components/_calendar_date.scss
@@ -1,8 +1,12 @@
+$calendar-date-color1: #000;
+$calendar-date-color2: lighten($calendar-date-color1, 50%);
+$calendar-date-color3: lighten($calendar-date-color1, 30%);
+
 .calendar-date {
   position: relative;
   z-index: 1;
 
-  float: right;
+  float: left;
 
   font-size: 0.5em;
 
@@ -12,6 +16,7 @@
   vertical-align: middle;
   text-align: center;
   text-transform: uppercase;
+  margin-right: 2em;
 
   cursor: help;
 
@@ -33,11 +38,12 @@
 .calendar-date_month {
   line-height: 1.6em;
   padding-bottom: 1px;
+  font-family: Helvetica, sans-serif;
 
   @include border-top-radius(3px);
 
-  background: #629c2e;
-  @include background-image(linear-gradient(top, #89c84d, #629c2e 75%, #548d20));
+  background: $calendar-date-color1;
+  @include background-image(linear-gradient(top, $calendar-date-color2, $calendar-date-color1 75%, $calendar-date-color3));
   @include box-shadow(inset 0 0 0 1px rgba(0, 0, 0, 0.2), inset 0 1px rgba(0, 0, 0, 0.1), inset 0 2px rgba(255, 255, 255, 0.25), 0 1px 3px rgba(0, 0, 0, 0.4));
 
   color: #fff;
