--- a/_sass/main/base/_typography.scss
+++ b/_sass/main/base/_typography.scss
@@ -1,36 +1,32 @@
-@font-face {
-  font-family: 'Vollkorn';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Vollkorn Regular'), local('Vollkorn-Regular'), url(http://themes.googleusercontent.com/static/fonts/vollkorn/v4/BCFBp4rt5gxxFrX6F12DKnYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
-}
+@import "fonts/gilda_sans";
+@import "fonts/open_sans";
 
-@font-face {
-  font-family: 'Lusitana';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lusitana'), url(http://themes.googleusercontent.com/static/fonts/lusitana/v2/tAIvAkRzqMJf8Y4fM1R7PXYhjbSpvc47ee6xR_80Hnw.woff) format('woff');
-}
+$body-text-color: $base-text-color;
+$body-font-family: "Open Sans", $base-font-stack;
 
-$body-text-color: $base-text-color !default;
+// $header-font-family: "Vollkorn", $base-font-stack;
+$header-font-family: "Gilda Display", $base-font-stack;
+$header-line-height: 1.4;
+$header-top-margin: 1em;
+$header-bottom-margin: 0.2em;
 
-$header-font-family: "Vollkorn", $base-font-stack !default;
-$header-line-height: 1.4 !default;
-$header-top-margin: 1em !default;
-$header-bottom-margin: 0.2em !default;
+$paragraph-font-size: 1em;
+$paragraph-line-height: 1.6;
+$paragraph-margin-top: emCalc(8px);
+$paragraph-margin-bottom: emCalc(20px);
 
-$paragraph-font-size: 1em !default;
-$paragraph-line-height: 1.4 !default;
-$paragraph-margin-top: emCalc(8px) !default;
-$paragraph-margin-bottom: emCalc(20px) !default;
-
-$link-text-color: $body-text-color !default;
+$link-text-color: $body-text-color;
 
 html, body {
   font-size: $base-font-size;
-  font-family: "Lusitana", $base-font-stack;
+  font-family: $body-font-family;
   color: $body-text-color;
+
+  @media (max-width: 549px) {
+    font-size: $base-font-size * 0.75
+  }
 }
+
 
 #{headers()} {
   font-family: $header-font-family;
@@ -48,7 +44,7 @@ h6 { font-size: 1em; }
 
 a {
   color: $link-text-color;
-  font-weight: bold;
+  font-weight: 600;
   text-decoration: none;
   border-bottom: 1px solid lighten($link-text-color, 60%);
   @include transition(border-bottom 0.2s);
