--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,9 +21,9 @@
       <div class="boa-constrictor">
         <h1><a href="/">Eric Freese</a></h1>
         <ul class="navigation">
-          <li><a href="/">Home</a></li>
           <li><a href="/work.html">Work</a></li>
           <li><a href="/resume.html">Resume</a></li>
+          <li><a href="/contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
