--- a/_sass/main/components/_nav.scss
+++ b/_sass/main/components/_nav.scss
@@ -1,12 +1,13 @@
 nav {
   background: $base-text-color;
   color: #fff;
+  font-family: $header-font-family;
 
   padding-top: 6px;
   border-bottom: 6px solid #000;
   margin-bottom: 2em;
 
-  min-width: 14em;
+  min-width: 275px;
 
   h1 {
     line-height: 60px;
