--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -12,7 +12,7 @@
 // Components
 @import "main/components/boa_constrictor";
 @import "main/components/nav";
-@import "main/components/calendar_date";
+@import "main/components/article";
 
 @media print {
   @import "main/print";
