--- a/_sass/main/_variables.scss
+++ b/_sass/main/_variables.scss
@@ -1,4 +1,6 @@
-$base-font-size: 20px;
-$base-line-height: 26px;
+$base-font-size: 14px;
+$base-line-height: 1.6;
 $base-font-stack: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif !default;
 $base-text-color: #34302D;
+
+$breakpoint-transition-properties: 0.4s ease-out;
