--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>{% if page.title %}{{page.title}} | {% endif %}Eric Freese</title>
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link rel="stylesheet" href="/css/main.css">
-    
+
     {% for css in page.css %}
       {{ css }}
     {% endfor %}
