--- a/_sass/main/components/_nav.scss
+++ b/_sass/main/components/_nav.scss
@@ -1,17 +1,14 @@
 nav {
+  @include pie-clearfix;
   background: $base-text-color;
   color: #fff;
-  font-family: $header-font-family;
-
-  padding-top: 6px;
-  border-bottom: 6px solid #000;
-
-  min-width: 275px;
+  padding-top: 0.3em;
+  border-bottom: 2px solid #000;
 
   h1 {
     line-height: 60px;
-    margin: 0;
     font-size: 1.4em;
+    margin: 0;
 
     @media(min-width: 550px) {
       float: left;
@@ -37,7 +34,6 @@ nav {
     li {
       float: left;
       line-height: 60px;
-      font-size: 1em;
 
       a {
         color: inherit;
@@ -48,12 +44,5 @@ nav {
         margin-left: 1em;
       }
     }
-  }
-
-  // Clearfix
-  &:after {
-    content: '';
-    display: table;
-    width: 100%;
   }
 }
